--- a/django/pyproject.toml
+++ b/django/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.14"
 dependencies = [
     "django>=6.0.2",
     "djangorestframework>=3.16.1",
+    "google-generativeai>=0.8.6",
+    "python-dotenv>=1.2.1",
 ]
