--- a/django/pyproject.toml
+++ b/django/pyproject.toml
@@ -5,13 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "dj-database-url>=3.1.2",
     "django>=6.0.2",
-    "django-cors-headers>=4.9.0",
-    "django-environ>=0.13.0",
     "djangorestframework>=3.16.1",
-    "drf-spectacular>=0.29.0",
-    "environ>=1.0",
-    "gunicorn>=25.1.0",
-    "psycopg2-binary>=2.9.11",
+    "google-generativeai>=0.8.6",
+    "python-dotenv>=1.2.1",
 ]
