--- a/django/pyproject.toml
+++ b/django/pyproject.toml
@@ -5,8 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "dj-database-url>=3.1.2",
     "django>=6.0.2",
+    "django-cors-headers>=4.9.0",
+    "django-environ>=0.13.0",
     "djangorestframework>=3.16.1",
-    "google-generativeai>=0.8.6",
+    "google-genai>=1.65.0",
+    "psycopg[binary]>=3.3.3",
     "python-dotenv>=1.2.1",
 ]
