--- a/django/pyproject.toml
+++ b/django/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "django>=6.0.2",
     "django-cors-headers>=4.9.0",
     "django-environ>=0.13.0",
-    "django-rest-framework>=0.1.0",
     "djangorestframework>=3.16.1",
+    "google-genai>=1.65.0",
+    "psycopg[binary]>=3.3.3",
+    "django-rest-framework>=0.1.0",
     "drf-spectacular>=0.29.0",
     "google-generativeai>=0.8.6",
     "gunicorn>=25.1.0",
